# dpkg-scanpackages-py

./: .gitignore  .pre-commit-config.yaml  README.md  dpkg-scanpackages.py  pyproject.toml
.github/workflows/: python.yaml
src/: LICENSE
src/dpkg_scanpackages/: __init__.py  __main__.py  cli.py  scan_packages.py  utils.py
tests/: 4MBPackages  ExamplePackages  NewestPackages  OrigPackages  conftest.py  find_keys.py  test_scan.py  test_scan_tools.py  test_utils.py
